--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
 
     <!-- 1. Menu -->
-    <div id="idMenu"> Menu
+    <div id="idMenu" class = "box1"> Menu
     <ol class="menuTitle"> Beverage
         <li class="menuContent">
             <span class="menuName">아메리카노</span>
@@ -63,10 +63,10 @@
     </div>
 
     <!-- 1-1. Set. -->
-    <div id="idSetMenu">Set Menu-------------------------------------------------------------</div>
+    <div id="idSetMenu" class = "box2">Set Menu-------------------------------------------------------------</div>
 
     <!-- 1-2. Opt. -->
-    <div id="idOption">Option
+    <div id="idOption" class = "box3">Option
     <ol class="optMenu"> Beverage
         <li class="optName">
             Hot +0
@@ -98,7 +98,7 @@
     </ol>
     </div>
     <!-- 2. Price -->
-    <div id="idPrice">Price
+    <div id="idPrice" class = "box4">Price
 
     <!-- 주문내역 -->
     <div class="orderList 1">주문내역
@@ -119,7 +119,7 @@
 
     </div>
     <!-- 수량 -->
-    <div class="orderList 2">수량
+    <div class="orderList 2" class = "box3">수량
 
     <div class="orderCount">1</div>
     <div class="orderCount">1</div>
@@ -144,7 +144,7 @@
     </div>
 
     <!-- 3. Cal. -->
-    <div id="Cal">Cal
+    <div id="Cal" class = "box5">Cal
 
     <button class="calBtn">현금</button>
     <button class="calBtn">카드</button>
