--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- 0. Title
     <div id="idTitle">체심도 스리랑카 카페</div> -->
         
-    
+
     <!-- 1. Menu -->
     <div id="idMenu" class = "box1"> Menu
     <ol class="menuTitle"> Beverage
@@ -98,10 +98,10 @@
     </ol>
     </div>
     <!-- 2. Price -->
-    <div id="idPrice" class = "box4">Price
+    <div id="idPrice" class = "box4">
 
     <!-- 주문내역 -->
-    <div class="orderList 1">주문내역
+    <div class="orderList1">주문내역
 
     <div class="orderBorder">
         <ul class="orderMain"> 아메리카노
@@ -119,7 +119,7 @@
 
     </div>
     <!-- 수량 -->
-    <div class="orderList 2" class = "box3">수량
+    <div class="orderList2" class = "box3">수량
 
     <div class="orderCount">1</div>
     <div class="orderCount">1</div>
@@ -127,7 +127,7 @@
     </div>
 
     <!-- 가격 -->
-    <div class="orderList 3">가격
+    <div class="orderList3">가격
 
     <div class="orderPrice">2000</div>
     <div class="orderPrice">9000</div>
