--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
 
         <li class="menuContent">
             <div>
-                <button class="menuBtn" id="tira">티라미수 5600원</button>
+                <button class="menuBtnDessert" id="tira">티라미수 5600원</button>
             </div> 
         </li>
         <li class="menuContent">
             <div>
-                <button class="menuBtn" id="waf">와플 4000원</button>
+                <button class="menuBtnDessert" id="waf">와플 4000원</button>
             </div> 
         </li>
         <li class="menuContent">
              <div>
-                <button class="menuBtn" id="ice">아이스크림 3000원</button>
+                <button class="menuBtnDessert" id="ice">아이스크림 3000원</button>
             </div> 
         </li>
     </ul>
@@ -126,14 +126,14 @@
         <div class="optTitle">Food Option</div>
         <li class="optName">
             곱빼기 +1000
-            <input class="optCheck X2" type="checkbox">
+            <input class="optCheck2" id= "X2" type="checkbox">
         </li>
         <li class="optName">
             고수추가 +0
-            <input class="optCheck Gosu" type="checkbox">
+            <input class="optCheck2" id= "Gosu" type="checkbox">
         </li>
         <li class="optName">
-            <input class="optCheck" id = "OK" type="button" value="OK!">
+            <input class="optCheck2" id = "OK2" type="button" value="OK!">
         </li>
     </ol>
     </div>
